vlib/v/checker/tests/ref_to_non_ref_err.out
vlib/v/checker/tests/ref_to_non_ref_err.vv:12:17: error: cannot use `&Foo` as `Foo` in argument 1 to `.index()`
   10 | }
   11 | 
   12 | dump(list.index(unsafe { &list[1] }))
      |                 ~~~~~~~~~~~~~~~~~~~
