vlib/v/checker/tests/ref_to_non_ref_err.vv
struct Foo {
	idx int
}

mut list := []Foo{}
for i in 0 .. 3 {
	list << Foo{
		idx: i
	}
}

dump(list.index(unsafe { &list[1] }))
